# VS-AudioResample

./: CMakeLists.txt  README.md
cmake/: Clang.cmake  fetch.cmake  soxr.cmake  soxr_patches.cmake
src/: config.hpp  plugin.cpp  resample.cpp  resample.hpp  sampletype.cpp  sampletype.hpp  vsautils.cpp  vsautils.hpp  vsmap.cpp  vsmap.hpp  vsmap_st.cpp  vsmap_st.hpp
src/common/: overflow.cpp  overflow.hpp  resquality.cpp  resquality.hpp  sampletype.cpp  sampletype.hpp
src/utils/: array.hpp  bitops.hpp  debug.hpp  map.hpp  number.hpp  sample.hpp  string.hpp
src/vsmap/: vsmap.cpp  vsmap.hpp  vsmap_common.cpp  vsmap_common.hpp
src/vsutils/: audio.cpp  audio.hpp  bitshift.hpp
